--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,13 +1,7 @@
-<%= form_tag(multipart: true) do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag( "Import CSV" ) %>
-<% end %>
-
-<%= form_with(model: transaction, local: true) do |form| %>
+<%= form_with(model: transaction, local: true, class: "form") do |form| %>
   <% if transaction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
-
       <ul>
       <% transaction.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -15,4 +9,10 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-group">
+    <%= form.file_field :file, class: "form-control-file", required: true %>
+  </div>
+  <div class="form-group">
+    <%= form.submit "Import CSV", class: "btn btn-primary" %>
+  </div>
 <% end %>
