--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Transaction</h1>
 
-<%= render 'form', transaction: @transaction %>
-
-<%= link_to 'Back', transactions_path %>
+<div class="container">
+  <h1>New Transactions</h1>
+  <%= render 'form', transaction: @transaction %>
+</div>
