--- a/app/views/transactions/_table.html.erb
+++ b/app/views/transactions/_table.html.erb
@@ -1,5 +1,5 @@
-<table class="table">
-  <thead>
+<table class="table table-striped table-hover table-sm table-responsive">
+  <thead class="thead-dark">
   <tr>
     <th>Amount</th>
     <th>Description</th>
@@ -9,15 +9,13 @@
   </thead>
 
   <tbody>
-  <% transactions.each do |transaction| %>
-    <tr>
-      <td><%= transaction.amount %></td>
-      <td><%= transaction.description %></td>
-      <td><%= transaction.date %></td>
-      <td><%= link_to 'Show', transaction %></td>
-      <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-      <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+  <%- if transactions.any? %>
+    <% transactions.each do |transaction| %>
+      <%= render "transactions/row", transaction: transaction %>
+    <% end %>
   <% end %>
   </tbody>
 </table>
+<%- if transactions.none? %>
+  <b>No data to display.</b>
+<%end%>
