Editable labels. Refactor profile and forms.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <%= link_to "Transactions", transactions_path, class: "nav-link" %>
       </li>
       <li>
-        <%= link_to "Labels", labels_path, class: "dropdown-item" %>
+        <%= link_to "Labels", labels_path, class: "nav-link" %>
       </li>
     </ul>
     <%= render 'devise/menu/login_items' %>
