--- a/app/views/labels/new.html.erb
+++ b/app/views/labels/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Label</h1>
+<div class="row">
+  <div class="col-sm-6">
+    <h1>New Label</h1>
+    <%= render 'form', label: @label %>
+  </div>
+  <div class="col-sm-6">
+    <h1>Current Labels</h1>
+    <%= render "/shared/table", resource_name: "label", resources: current_profile.labels %>
+  </div>
+</div>
 
-<%= render 'form', label: @label %>
-
-<%= link_to 'Back', labels_path %>
