--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <div class="container-fluid">
       <%= render 'layouts/header' %>
-      <%= yield %>
+      <div class="container-fluid">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
