--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -1,6 +1,25 @@
 <h1>Editing Transaction</h1>
-
-<%= render 'form', transaction: @transaction %>
+<%= render "attrs", transaction: @transaction %>
+<%= form_with(model: @transaction, local: true, class: "form") do |form| %>
+  <% if @transaction.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
+      <ul>
+        <% @transaction.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= form.label :label, "Label" %>
+    <%= form.collection_select :label_id, Label.order(:name),:id,:name, include_blank: true %>
+  </div>
+  <div class="actions btn-group-sm">
+    <%= link_to "Cancel", transactions_path, class: "btn btn-secondary" %>
+    <%= form.submit class: "btn btn-primary"%>
+  </div>
+<% end %>
 
 <%= link_to 'Show', @transaction %> |
 <%= link_to 'Back', transactions_path %>
