--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,10 @@
-
-<div class="container">
-  <h1>New Transactions</h1>
-  <%= render 'form', transaction: @transaction %>
+<div class="row">
+  <div class="col-sm-4">
+    <h1>New Transactions</h1>
+    <%= render 'form', transaction: @transaction %>
+  </div>
+  <div class="col-sm-8">
+    <h1>Recent Transactions</h1>
+    <%= render "/shared/table", resource_name: "transaction", resources: current_profile.transactions.limit(10) %>
+  </div>
 </div>
